--- a/styles/Card.module.css
+++ b/styles/Card.module.css
@@ -91,3 +91,51 @@
   display: inline-block;
 }
 
+.fileInfo {
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+  color: #666;
+  font-size: 0.9rem;
+  margin-top: 0.5rem;
+}
+
+.fileInfo .icon {
+  vertical-align: middle;
+  margin-right: 0.25rem;
+}
+
+.fileInfo span {
+  display: flex;
+  align-items: center;
+}
+
+.extensionBar {
+  width: 100%;
+  height: 30px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: white;
+  font-weight: 500;
+  text-transform: uppercase;
+  font-size: 0.9rem;
+}
+
+/* 확장자별 색상 */
+.extensionBar:global([data-ext="zip"]) {
+  background-color: #FF4444;
+}
+
+.extensionBar:global([data-ext="wav"]) {
+  background-color: #3366FF;
+}
+
+.extensionBar:global([data-ext="am3data"]) {
+  background-color: #9933FF;
+}
+
+.extensionBar:global([data-ext="am2data"]) {
+  background-color: #33CC33;
+}
+
