--- a/styles/Card.module.css
+++ b/styles/Card.module.css
@@ -170,4 +170,8 @@
 .extensionBar:global([data-ext="am2data"]) {
   background-color: #33CC33;
 }
+.extensionBar:global([data-ext="package"]) {
+  background-color: #000;
+  color: #fff;
+}
 
