--- a/styles/Navbar.module.css
+++ b/styles/Navbar.module.css
@@ -25,7 +25,7 @@
   align-items: center;
   gap: 2rem;
   background-color: #ffd7e5;
-  border-bottom: 1px solid #ffbdd3;
+  border-bottom: 1px solid #bddcff;
 }
 
 .subNavLink {
