--- a/styles/Navbar.module.css
+++ b/styles/Navbar.module.css
@@ -24,7 +24,7 @@
   justify-content: center;
   align-items: center;
   gap: 2rem;
-  background-color: #a8d1fe;
+  background-color: #b7d8fd;
   border-bottom: 1px solid #bddcff;
 }
 
