--- a/styles/Card.module.css
+++ b/styles/Card.module.css
@@ -23,7 +23,7 @@
 .title {
   font-size: 18px;
   font-weight: bold;
-  color: #0070f3;
+  color: #484848;
   text-decoration: none;
   display: block;
   margin-bottom: 8px;
